fixed style issues

--- a/src/assets/scss/sidebar.scss
+++ b/src/assets/scss/sidebar.scss
@@ -1,92 +1,102 @@
 @import 'partials';
 
 .sidebar {
-  
-    width: 330px;
-    max-width: 330px;
-    flex: 0 0 330px;
-    height: 100vh;
-    padding: 37px 16px;
-    border-top-right-radius: 30px;
-    border-bottom-right-radius: 30px;
-    position: fixed;
-    left: 0;
-    top: 0;
-    transition: width 0.3s ease-in-out;
-    background-color: #2CA0DA;
-    .close-nav{
-        position: absolute;
-        right: -83px !important;
-        display: none;
-    }
-    &.collapsed {
-        width: 80px;
-        max-width: 80px;
-        flex: 0 0 80px;
-        
-        .txt {
-            display: none;
-        }
+  width: 330px;
+  max-width: 330px;
+  flex: 0 0 330px;
+  height: 100vh;
+  padding: 37px 16px;
+  border-top-right-radius: 30px;
+  border-bottom-right-radius: 30px;
+  position: fixed;
+  left: 0;
+  top: 0;
+  transition: width 0.3s ease-in-out;
+  background-color: #2ca0da;
+  @media ($sm-1679) {
+    width: 280px;
+  }
+  @media ($sm-1481) {
+    width: 200px;
+  }
+  @media ($sm-1199) {
+    width: 180px;
+  }
+  @media ($sm-579) {
+    width: 50px;
+  }
+  .close-nav {
+    position: absolute;
+    right: -83px !important;
+    display: none;
+  }
+  &.collapsed {
+    width: 80px;
+    max-width: 80px;
+    flex: 0 0 80px;
 
-        .logo img {
-            width: 50px;
-        }
-
-        .open-nav{
-            display: none;
-        }
-        .close-nav{
-            display: block;
-        }
-    }
-
-    .top-hold {
-        position: relative;
-        display: flex;
-        align-items: center;
-        margin-bottom: 46px;
-        
-        .logo {
-            max-width: 205px;
-            margin: 0;
-            img {
-                width: 100%;
-            }
-        }
-
-        .toggle-nav {
-            border: none;
-            background: transparent;
-            outline: none;
-            position: absolute;
-            right: 0px;
-            cursor: pointer;
-        }
+    .txt {
+      display: none;
     }
 
-    .nav {
-        flex-direction: column;
-        .nav-link {
-            color: white;
-            font-weight: 500;
-            font-size: 15px;
-            display: flex;
-            padding: 20px;
-            border-radius: 20px;
-            margin-bottom: 20px;
-            transition: padding 0.3s ease-in-out;
-
-            .icon {
-                width: 20px;
-                height: 20px;
-                flex-shrink: 0;
-                margin-right: 19px;
-            }
-
-            &:hover,
-            &.active {
-                background: rgba(255, 255, 255, 0.4);
-            }
-        }
+    .logo img {
+      width: 50px;
     }
+
+    .open-nav {
+      display: none;
+    }
+    .close-nav {
+      display: block;
+    }
+  }
+
+  .logo {
+    max-width: 205px;
+    margin: 0;
+    img {
+      width: 100%;
+    }
+  }
+  .top-hold {
+    position: relative;
+    display: flex;
+    align-items: center;
+    margin-bottom: 46px;
+
+    .toggle-nav {
+      border: none;
+      background: transparent;
+      outline: none;
+      position: absolute;
+      right: 0px;
+      cursor: pointer;
+    }
+  }
+
+  .nav {
+    flex-direction: column;
+    .nav-link {
+      color: white;
+      font-weight: 500;
+      font-size: 15px;
+      display: flex;
+      padding: 20px;
+      border-radius: 20px;
+      margin-bottom: 20px;
+      transition: padding 0.3s ease-in-out;
+
+      .icon {
+        width: 20px;
+        height: 20px;
+        flex-shrink: 0;
+        margin-right: 19px;
+      }
+
+      &:hover,
+      &.active {
+        background: rgba(255, 255, 255, 0.4);
+      }
+    }
+  }
 }
