--- a/src/assets/scss/dashboard.scss
+++ b/src/assets/scss/dashboard.scss
@@ -29,6 +29,10 @@
       width: calc(100% - 50px);
       margin-left: 50px;
     }
+    body.sidebar-collapsed & {
+      width: calc(100% - 80px);
+      margin-left: 80px !important;
+    }
     &.expanded {
       width: calc(100% - 80px);
       margin-left: 80px;
