--- a/src/assets/scss/signin.scss
+++ b/src/assets/scss/signin.scss
@@ -26,6 +26,7 @@
         flex-wrap: wrap;
         @media (max-width:650px){
             flex-direction: column;
+            justify-content: center;
         }
         .panel-left{
             background: #0096DF;
@@ -57,6 +58,7 @@
             @media (max-width:650px){
                 max-width: 100%;
                 flex: none;
+                display: none;
             }
             &:after{
                 content: "";
@@ -64,6 +66,7 @@
                 height: 751px;
                 background: url(../images/login-left-bg.png) no-repeat bottom right;
                 background-size: contain;
+                background-position: bottom right;
                 position: absolute;
                 right: 0;
                 bottom: -55px;
@@ -161,12 +164,14 @@
             }
             @media (max-width:650px){
                 max-width: 100%;
-                padding-left: 20px;
                 flex: unset;
-                padding-top: 40px;
+                padding: 0 30px;
             }
             @media ($sm-579){
-                padding: 30px 0 0;
+                padding: 0 20px;
+            }
+            @media ($sm-479){
+                padding: 0 10px;
             }
             .form-wrp-center{
                 max-width: 414px;
