--- a/src/assets/scss/dashboard.scss
+++ b/src/assets/scss/dashboard.scss
@@ -1,202 +1,323 @@
 @import 'partials';
-.dashboard-outer {
-  display: flex;
-  align-items: stretch;
-  background-color: #2ca0da;
-
-  .right-pannel {
-    flex: 1;
-    width: calc(100% - 323px);
-    margin-left: 328px;
-    min-height: 100vh;
-    background-color: #ffffff;
-    border-radius: 40px 0 0 40px;
+.dashboard-outer{
     display: flex;
-    flex-direction: column;
-    @media ($sm-1679) {
-      width: calc(100% - 280px);
-      margin-left: 280px;
-    }
-    @media ($sm-1481) {
-      width: calc(100% - 200px);
-      margin-left: 200px;
-    }
-    @media ($sm-1199) {
-      width: calc(100% - 180px);
-      margin-left: 180px;
-    }
-    @media ($sm-579) {
-      width: calc(100% - 50px);
-      margin-left: 50px;
-    }
-    body.sidebar-collapsed & {
-      width: calc(100% - 80px);
-      margin-left: 80px !important;
-    }
-    &.expanded {
-      width: calc(100% - 80px);
-      margin-left: 80px;
-    }
-    .cta-info-blk {
-      display: flex;
-      flex-wrap: wrap;
-      padding: 26px 25px 0;
-      @media ($sm-1679) {
-        padding: 20px 25px 0;
-      }
-      .board-info {
-        display: flex;
-        align-items: center;
-        .icon-blk {
-          width: 47px;
-          height: 47px;
-          border-radius: 47px;
-          background-color: #eeecee;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          margin-right: 16px;
-        }
-        .txt {
-          font-weight: 500;
-          color: $primaryColor;
-          font-size: 23px;
-        }
-      }
-    }
-    .content-wrp-outer {
-      display: flex;
-      flex-wrap: wrap;
-      align-items: stretch;
-      padding: 25px;
-      max-height: calc(100vh - 70px);
-      overflow-y: auto;
-      flex-grow: 1;
-      .panel-wrp {
-        display: flex;
-        flex-wrap: wrap;
-        max-width: 753px;
-        width: 100%;
-        margin-right: 26px;
-        @media ($sm-1679) {
-          max-width: 48%;
-          margin-right: 18px;
-        }
-        .greetings-blk {
-          border-radius: 24px;
-          background: url('../img/greetings-dashboard.png') no-repeat;
-          background-position: right bottom;
-          background-size: cover;
-          height: 282px;
-          flex-grow: 1;
-          padding: 0 47px;
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          color: $white;
-          .greetings-title {
-            font-size: 30px;
-            font-weight: 600;
-            margin-bottom: 23px;
-            @media ($sm-1679) {
-              font-size: 26px;
-              margin-bottom: 20px;
-            }
-            @media ($sm-1441) {
-              font-size: 24px;
-              margin-bottom: 15px;
-            }
-            @media ($sm-1199) {
-              font-size: 22px;
-              margin-bottom: 10px;
-            }
-          }
-          .greetings-txt {
-            font-size: 18px;
-            font-weight: 300;
-            @media ($sm-1679) {
-              font-size: 17px;
-            }
-            @media ($sm-1441) {
-              font-size: 16px;
-            }
-            @media ($sm-1199) {
-              font-size: 15px;
-            }
-            @media ($sm-991) {
-              font-size: 14px;
-            }
-          }
-        }
-      }
-      .count-blks-wrp {
-        display: flex;
-        flex-wrap: wrap;
+    align-items: stretch;
+    background-color: #2CA0DA;
+
+    .right-pannel{
         flex: 1;
-        height: 282px;
-        .count-blk {
-          width: calc((100% / 2) - 14px);
-          border-radius: 17px;
-          background-color: $dashbordBlkBg;
-          padding: 30px 26px;
-          display: flex;
-          margin: 7px;
-          height: 133px;
-          align-items: center;
-          @media ($sm-1679) {
-            padding: 24px;
-          }
-          .icon-blk {
-            width: 74px;
-            height: 74px;
-            border-radius: 74px;
-            background-color: $white;
-            margin-right: 26px;
-            padding: 20px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            @media ($sm-1679) {
-              width: 64px;
-              height: 64px;
-              margin-right: 20px;
-            }
-            @media ($sm-1441) {
-              width: 54px;
-              height: 54px;
-            }
-            @media ($sm-1199) {
-              width: 44px;
-              height: 44px;
-            }
-            img {
-              max-width: 31px;
-            }
-          }
-          .dtl-blk {
-            display: flex;
-            flex: 1;
-            flex-direction: column;
-            color: $primaryColor;
-            justify-content: center;
-            .info {
-              font-size: 18px;
-              margin-bottom: 10px;
-              @media ($sm-1679) {
-                font-size: 16px;
-              }
-            }
-            .count {
-              font-weight: 600;
-              font-size: 26px;
-              line-height: 1;
-              @media ($sm-1679) {
-                font-size: 24px;
-              }
-            }
-          }
+        width: calc(100% - 323px);
+        margin-left: 328px;
+        min-height: 100vh;
+        background-color: #FFFFFF;
+        border-radius: 40px 0 0 40px;
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        z-index: 1;
+        @media($sm-1679){
+            width: calc(100% - 280px);
+            margin-left: 280px;
         }
-      }
+        @media($sm-1481){
+            width: calc(100% - 200px);
+            margin-left: 200px;
+        }
+        @media($sm-1199){
+            width: calc(100% - 180px);
+            margin-left: 180px;
+        }
+        @media($sm-579){
+            width: calc(100% - 50px);
+            margin-left: 50px;
+        }
+        &.expanded{
+            width: calc(100% - 80px); 
+            margin-left: 80px;
+        }
+        .cta-info-blk{
+            display: flex;
+            flex-wrap: wrap;
+            padding: 26px 25px 0;
+            @media($sm-1679){
+                padding: 20px 25px 0;
+            }
+            .board-info{
+                display: flex;
+                align-items: center;
+                .icon-blk{
+                    width: 47px;
+                    height: 47px;
+                    border-radius: 47px;
+                    background-color: #EEECEE;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    margin-right: 16px;
+                    @media ($sm-1679){
+                        width: 42px;
+                        height: 42px;
+                        border-radius: 42px; 
+                    }
+                    @media ($sm-1441){
+                        width: 38px;
+                        height: 38px;
+                        border-radius: 38px; 
+                    }
+                    @media ($sm-1199){
+                        width: 36px;
+                        height: 36px;
+                        border-radius: 36px; 
+                    }
+                    @media ($sm-991){
+                        width: 34px;
+                        height: 34px;
+                        border-radius: 34px; 
+                    }
+                    img{
+                        max-width: 20px;
+                        @media ($sm-1679){
+                            max-width: 18px;
+                        }
+                        @media ($sm-1199){
+                            max-width: 16px;
+                        }
+                    }
+                }
+                .txt{
+                    font-weight: 500;
+                    color: $primaryColor;
+                    font-size: 23px;
+                    @media ($sm-1679){
+                        font-size: 22px;
+                    }
+                    @media ($sm-1441){
+                        font-size: 20px;
+                    }
+                    @media ($sm-1199){
+                        font-size: 18px;
+                    }
+                    @media ($sm-991){
+                        font-size: 17px;
+                    }
+                    @media ($sm-767){
+                        font-size: 16px;
+                    }
+                }
+            }
+        }
+        .content-wrp-outer{
+            display: flex;
+            align-items: stretch;
+            padding: 25px;
+            max-height: calc(100vh - 70px);
+            overflow-y: auto;
+            flex-grow: 1;
+            @media ($sm-1679){
+                padding: 20px;
+            }
+            @media ($sm-1199){
+                padding: 15px;
+            }
+            @media ($sm-991){
+                flex-direction: column;
+                max-height: calc(100vh - 146px);
+            }
+            @media ($sm-767){
+                max-height: calc(100vh - 165px);
+            }
+            .panel-wrp{
+                display: flex;
+                flex-wrap: wrap;
+                max-width: 753px;
+                width: 100%;
+                margin-right: 26px;
+                @media ($sm-1679){
+                    max-width: 48%;
+                    margin-right: 18px;
+                }
+                @media ($sm-1199){
+                    max-width: 44%;
+                    margin-right: 14px;
+                }
+                @media ($sm-991){
+                    max-width: 100%;
+                    margin-right: 0;
+                }
+                .greetings-blk{
+                    border-radius: 24px;
+                    background: url('../img/greetings-dashboard.png') no-repeat;
+                    background-position: right bottom;
+                    background-size: cover;
+                    height: 282px;
+                    flex-grow: 1;
+                    padding: 0 47px;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    color: $white;
+                    @media ($sm-1679){
+                        padding: 0 40px;
+                    }
+                    @media ($sm-1441){
+                        padding: 0 35px;
+                    }
+                    @media ($sm-1199){
+                        padding: 0 30px;
+                    }
+                    @media ($sm-991){
+                        height: 195px;
+                    }
+                    @media ($sm-767){
+                        padding: 0 20px;
+                        height: 165px;
+                    }
+                    .greetings-title{
+                        font-size: 30px;
+                        font-weight: 600;
+                        margin-bottom: 23px;
+                        @media ($sm-1679){
+                            font-size: 26px;
+                            margin-bottom: 20px;
+                        }
+                        @media ($sm-1441){
+                            font-size: 24px;
+                            margin-bottom: 15px;
+                        }
+                        @media ($sm-1199){
+                            font-size: 22px;
+                            margin-bottom: 10px;
+                        }
+                    }
+                    .greetings-txt{
+                        font-size: 18px;
+                        font-weight: 300;
+                        @media ($sm-1679){
+                            font-size: 17px;
+                        }
+                        @media ($sm-1441){
+                            font-size: 16px;
+                        }
+                        @media ($sm-1199){
+                            font-size: 15px;
+                        }
+                        @media ($sm-991){
+                            font-size: 14px;
+                        }
+                        br{
+                            @media ($sm-1199){
+                                display: none;
+                            }
+                        }
+                    }
+                }
+            }
+            .count-blks-wrp{
+                display: flex;
+                flex-wrap: wrap;
+                flex: 1;
+                height: 282px;
+                @media ($sm-991){
+                   width: 100%;
+                   margin-top: 10px;
+                   gap: 14px;
+                }
+                .count-blk{
+                    width: calc((100% / 2) - 14px);
+                    border-radius: 17px;
+                    background-color: $dashbordBlkBg;
+                    padding: 30px 26px;
+                    display: flex;
+                    flex-wrap: wrap;
+                    margin: 7px;
+                    height: 133px;
+                    align-items: center;
+                    @media ($sm-1679){
+                        padding: 24px;
+                    }
+                    @media ($sm-1441){
+                        padding: 20px;
+                    }
+                    @media ($sm-991){
+                        width: calc((100% / 2) - 7px);
+                        margin: 0px;
+                    }
+                    @media (max-width:700px){
+                        width: 100%;
+                        height: 125px;
+                    }
+                    @media ($sm-579){
+                        height: 115px;
+                    }
+                    .icon-blk{
+                        width: 74px;
+                        height: 74px;
+                        border-radius: 74px;
+                        background-color: $white;
+                        margin-right: 26px;
+                        padding: 20px;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        @media ($sm-1679){
+                            width: 60px;
+                            height: 60px;
+                            margin-right: 20px;
+                        }
+                        @media ($sm-1441){
+                            width: 50px;
+                            height: 50px;
+                        }
+                        @media ($sm-1199){
+                            width: 40px;
+                            height: 40px;
+                            margin-right: 15px;
+                        }
+                        img{
+                            max-width: 31px;
+                            @media ($sm-1679){
+                                max-width: 24px;
+                            }
+                            @media ($sm-1199){
+                                max-width: 20px;
+                            }
+                        }
+                    }
+                    .dtl-blk{
+                        display: flex;
+                        flex: 1;
+                        flex-direction: column;
+                        color: $primaryColor;
+                        justify-content: center;
+                        .info{
+                            font-size: 18px;
+                            margin-bottom: 10px;
+                            @media ($sm-1679){
+                                font-size: 16px;
+                            }
+                            @media ($sm-1199){
+                                font-size: 15px;
+                                margin-bottom: 5px;
+                            }
+                        }
+                        .count{
+                            font-weight: 600;
+                            font-size: 26px;
+                            line-height: 1;
+                            @media ($sm-1679){
+                                font-size: 24px;
+                            }
+                            @media ($sm-1441){
+                                font-size: 22px;
+                            }
+                            @media ($sm-1199){
+                                font-size: 20px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
     }
-  }
 }
+
