--- a/src/assets/scss/sidebar.scss
+++ b/src/assets/scss/sidebar.scss
@@ -14,6 +14,7 @@
     top: 0;
     transition: width 0.3s ease-in-out;
     background-color: #2CA0DA;
+    z-index: 2;
     @media ($sm-1679){
         width: 280px;
         max-width: 280px;
