--- a/src/assets/scss/signin.scss
+++ b/src/assets/scss/signin.scss
@@ -29,8 +29,8 @@
             justify-content: center;
         }
         .panel-left{
-            background: #0096DF;
-            background-size: 700px;
+            background: url('../images/login-left-bg.png') no-repeat top 90px right #0096DF;
+            background-size: contain;
             border-radius: 31px;
             padding: 56px;
             flex: 1;
@@ -60,39 +60,39 @@
                 flex: none;
                 display: none;
             }
-            &:after{
-                content: "";
-                width: 100%;
-                height: 751px;
-                background: url(../images/login-left-bg.png) no-repeat bottom right;
-                background-size: contain;
-                background-position: bottom right;
-                position: absolute;
-                right: 0;
-                bottom: -55px;
-                top: unset;
-                @media (max-width:1750px){
-                    height: 660px;
-                    bottom: -77px;
-                }
-                @media ($sm-1679){
-                    height: 500px;
-                }
-                @media (max-width:1566px){
-                    height: 595px;
-                    bottom:-48px;
-                }
-                @media ($sm-1481){
-                    height: 508px;
-                }
-                @media (max-width:1199px){
-                    bottom:0px;
-                }
-                @media (max-width:650px){
-                    height: 176px;
-                    bottom:0px;
-                }
-            }
+            // &:after{
+            //     content: "";
+            //     width: 100%;
+            //     height: 751px;
+            //     background: url('../img/login-left-bg.png') no-repeat bottom right;
+            //     background-size: contain;
+            //     background-position: bottom right;
+            //     position: absolute;
+            //     right: 0;
+            //     bottom: -55px;
+            //     top: unset;
+            //     @media (max-width:1750px){
+            //         height: 660px;
+            //         bottom: -77px;
+            //     }
+            //     @media ($sm-1679){
+            //         height: 500px;
+            //     }
+            //     @media (max-width:1566px){
+            //         height: 595px;
+            //         bottom:-48px;
+            //     }
+            //     @media ($sm-1481){
+            //         height: 508px;
+            //     }
+            //     @media (max-width:1199px){
+            //         bottom:0px;
+            //     }
+            //     @media (max-width:650px){
+            //         height: 176px;
+            //         bottom:0px;
+            //     }
+            // }
             .logo-wrp{
                 display: flex;
                 position: relative;
